openshift/kustomize/app/subscriber/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: subscriber
  namespace: default
  annotations:
    description: Defines how to deploy subscriber
  labels:
    name: subscriber-app
    part-of: tno
    version: 1.0.0
    component: subscriber
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      name: subscriber
      part-of: tno
      component: subscriber
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: subscriber
      labels:
        name: subscriber
        part-of: tno
        component: subscriber
    spec:
      volumes:
        - name: subscriber-keycloak
          configMap:
            name: subscriber-sso
            items:
              - key: keycloak.json
                path: keycloak.json
        - name: subscriber-public-storage
          persistentVolumeClaim:
            claimName: subscriber-public-storage
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: subscriber
          image: bcgov-c4awhwfpcremdbga.azurecr.io/subscriber:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: subscriber-keycloak
              mountPath: /usr/share/nginx/html/keycloak.json
              subPath: keycloak.json
            - name: subscriber-public-storage
              mountPath: /usr/share/nginx/html/public/videos
          livenessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
